<resources>
    <string name="hello">Hello World, DogAppActivity!</string>
    <string name="app_name">DogChowMX</string>
    <string name="dogchow">Entrenador DOG CHOW\u00AE</string>
    <string name="login">Test Login</string>
    <string name="post">Test UI Server</string>
    <string name="alert_dialog_photo_message">Choose picture for send</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="lap">Lap</string>
    <string name="reset_due_to_shake">Resetting due to shake.</string>
    <string name="enter_name">Ingrese nombre</string>
    <string name="email">Correo</string>
    <string name="password">Contrase\u00f1a</string>
    <string name="submit">Ingresar</string>
    <string name="confirm_password">Confirmar contrase\u00f1a</string>
    <string name="login_success">Inicio de sesi\u00f3n con \u00e9xito</string>
    <string name="logout_unsuccess">Salir no es correcta</string>
    <string name="ratings_text">\u00bfQu\u00e9 nivel de dificultad tiene esta ruta?</string>
    <string name="ratings_title">Califica la ruta</string>
    <string name="save_map">Guardar</string>
    <string name="resume_map">Continuar</string>
    <string name="discard_map">Eliminar</string>
    <string name="share_msg">Dog Race, Successfully path shared</string>
    <string name="share_msg_discard">Dog Race, Do you want to discard last training spot?</string>
    <string name="title_stat">ESTADISTICAS</string>
    <string name="retrieve_pwd_title">\u00bfOlvidaste tu contrase\u00f1a</string>
    <string name="retrieve_pwd_desc">No te preocupes, escribe el mail que registraste y te la enviaremos por correo:</string>
    <string name="retrieve_pwd_email_id">Correo</string>
    <string name="retrieve_pwd_send_successful">Tu contrase\u00f1a ha sido enviada a tu correo electr\u00f3nico</string>
    <string name="retrieve_pwd_send_failure">Lo sentimos, tu correo electr\u00f3nico no se ha registrado previamente</string>
    <string name="retrieve_pwd_email_mandatory">EMAIL_MANDATORY</string>
    <string name="retrieve_pwd_email_not_correct">EMAIL_INCORRECT</string>
    <string name="exercise_title">ENTRENAMIENTO</string>
    <string name="fb_posted_successfully">Tu status se public\u00f3 exitosamente</string>
    <string name="fb_not_posted_successfully">No publicado con \u00e9xito</string>
    <string name="invalid_emailid">Invalid Email ID</string>
    <string name="user_exist">Error, User name already exists</string>
    <string name="invalid_email_address">Invalid Email.Please enter a valid email address</string>
    <string name="invalid_username_pwd">Nombre de usuario o contrase\u00f1a inv\u00e1lida</string>
    <string name="service_error">No se puede procesar datos</string>
    <string name="enter_username_pwd">Por favor, introduzca nombre de usuario o
		contrase\u00f1a</string>
    <string name="pwd_repwd_notmatch">Las contrase\u00f1as no coinciden, intente nuevamente</string>
    <string name="email_not_valid">Direcci\u00f3n de correo inv\u00e1lida</string>
    <string name="min_three_chars">La contrase\u00f1a debe tener un m\u00ednimo de 3 caracteres</string>
    <string name="invalid_params">Par\u00e1metros no v\u00e1lidos</string>
    <string name="posted_successfully">Has compartido la ruta exit\u00f3samente a la base de
		datos</string>
    <string name="not_posted_successfully">Por favor, int\u00e9ntelo de nuevo m\u00e1s tarde</string>
    <string name="service_unavailable">Servicio no disponible</string>
    <string name="unable_to_retrieve_data">No se puede recuperar los datos</string>
    <string name="unable_to_connect">Conexi\u00f3n rechazada</string>
    <string name="unable_to_get_data">Incapaz de obtener datos</string>
    <string name="no_connection">Compruebe la conexi\u00f3n a Internet</string>
    <string name="error_in_save">Error de conexi\u00f3n, vuelva a intentar m\u00e1s tarde</string>
    <string name="url_malformed">Excepci\u00f3n direcci\u00f3n URL incorrecta, mientras que el
		env\u00edo de</string>
    <string name="network_unreachable">Red inalcanzable</string>
    <string name="map_key">0ggmsULpx5gWnKdIEw2m1AmGVAPURVYY-LhPUYw</string>
    <string name="enter_route_name">Especificar nombre de ruta</string>
    <string name="parse_error">No se puede analizar</string>
    <string name="io_error">Servidor de destino no responde</string>
    <string name="unable_to_parse">No es posible analizar los datos</string>
    <string name="error_in_register">Error in registration</string>
    <string name="fb_error">Facebook login error</string>
    <string name="route_time">00.00.00</string>
    <string name="route_distance">0.00 km</string>
    <string name="route_speed">0.00 (km/h)</string>
    <string name="ratings_success">Clasificaciones de \u00e9xito</string>
    <string name="data_inadequate">fecha inadecuado</string>
    <string name="no_player">No se pudo encontrar el reproductor de m\u00fasica</string>
    <string name="nearby_places">lugares cercanos</string>
    <string name="register">REGISTRO</string>
    <string name="login_title">LOGIN</string>
    <string name="publish">Publicar</string>
    <string name="publish_fb">Publicar en Facebook</string>
    <string name="loading">Cargando</string>
    <string name="error_occurs">Error de conexi\u00f3n, vuelva a intentar m\u00e1s tarde</string>
    <string name="invalid_facebook_id">"ID de Facebook La solicitud debe ser especificado"</string>
    <string name="warning">Advertencia</string>
    <string name="map_not_loaded">No se puede cargar de nuevo Map.Try</string>
    <string name="invalid_username">Nombre de usuario o contrase\u00f1a inv\u00e1lida</string>
    <string name="no_such_user">Nombre de usuario no se encuentra</string>
    <string name="user_not_exist">Error. Usuario a\u00fan no registrado</string>
    <string name="user_already_exist">Error, nombre de usuario previamente registrado</string>
    <string name="logout">Cerrar sesi\u00f3n</string>
    <string name="gps_disabled">GPS est\u00e1 desactivado en el dispositivo. \u00bfQuieres lo activo?</string>
    <string name="mobile_newtork_disabled">Red m\u00f3vil est\u00e1 desactivada en el dispositivo. \u00bfQuieres lo activo?</string>
    <string name="invalid_parameters">Los par\u00e1metros no v\u00e1lidos</string>
    <string name="invalid_username_password">Nombre de usuario o contrase\u00f1a inv\u00e1lida</string>
    <string name="username_not_found">Nombre de usuario no se encuentra</string>
    <string name="login_cancel">Ingresar cancelado!</string>
    <string name="error_in_dialog">Error en el di\u00e1logo!</string>
    <string name="error_sending_message">Error al enviar el msg</string>
    <string name="login_fails">Inicio de sesi\u00f3n falla!</string>
    <string name="logout_start">Inicio de sesi\u00f3n falla!</string>
    <string name="logout_success">Cerrar sesi\u00f3n con \u00e9xito</string>
    <string name="location_not_determine">No se puede determinar la ubicaci\u00f3n</string>
    <string name="location_not_found">La ubicaci\u00f3n no pod\u00eda ser encontrado</string>
    <string name="current_position">Su posici\u00f3n actual es</string>
    <string name="facebook_updated">Facebook actualiza!</string>
    <string name="gps_away">GPS 0.1 km</string>
    <string name="route">RUTA</string>
    <string name="speed">Velocidad</string>
    <string name="direction_from">FROM:</string>
    <string name="direction_to">TO:</string>
    <string name="direction_fare">FARE ESTIMATE:</string>
    <string name="direction_distance">DISTANCE:</string>
    <string name="new_photo">New Photo</string>
    <string name="photos">Photos</string>
    <string name="product_details">Product Details</string>
    <string name="remove">Remove</string>
    <string name="route_name">Nombre de Ruta</string>
    <string name="share_route">Compartir</string>
    <string name="logout_facebook">Logout Facebook</string>
    <string name="photo_help">Help</string>
    <string name="photo">Photo</string>
    <string name="history">History</string>
    <string name="photo_details">Photo Details</string>
    <string name="error_response">Enter Response</string>
    <string name="sign">Signing In...</string>
    <string name="fb_publish">Publicar</string>
    <string name="fb_logout">Cerrar sesi\u00f3n en Facebook</string>
    <string name="fb_error_msg">Error en Facebook</string>
    <string name="fb_dialog_error_msg">La conexi\u00f3n con el servidor no tuvo \u00e9xito</string>
    <string name="fb_cancel_error_msg">Autenticaci\u00f3n con Facebook cancelado!</string>
    <string name="q">Q</string>
    <string name="no_details">(No Details)</string>
    <string name="a">A</string>
    <string name="share">Compartir</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_fb">Cancelar</string>
    <string name="ratings">Calificacion</string>
    <string name="unable_to_process">No se puede procesar</string>
    <string name="route_share_text1">Acabo de correr la Ruta</string>
    <string name="share_text">\u00a1Tu tambi\u00e9n corre con tu perro en familia! \nDescarga la aplicaci\u00f3n:</string>
    <string name="route_share_text2">con el</string>
    <string name="share_link">http://bitly.com/newsandroid</string>
    <string name="share_android">Android:</string>
    <string name="share_iphone">iPhone:</string>
    <string name="share_android_link">http://bitly.com/newsandroid</string>
    <string name="share_iphone_link">http://bitly.com/iphoneDC</string>
    <string name="fb_user_logout_success">Salir con \u00e9xito en Facebook</string>
    <string name="fb_user_logout_failure">Usuario cerrar\u00e1 la sesi\u00f3n</string>
    <string name="unable_to_publish">No se ha podido publicar</string>
    <string name="details_are_not_available">No hay detalles disponibles!</string>
    <string name="dog_data_label">Datos del perro</string>
    <string name="name">Nombre</string>
    <string name="dog_name">Nombre del perro</string>
    <string name="breed">Raza</string>
    <string name="gender">G\u00e9nero</string>
    <string name="life_Style">Tipo de Vida</string>
    <string name="activity">Actividad F\u00edsica</string>
    <string name="birthday_label">Fecha de Nacimiento</string>
    <string name="dog_age">A\u00f1o estimado de nacimiento</string>
    <string name="birthday">Fecha</string>
    <string name="dog_owner_data">Datos del due\u00f1o</string>
    <string name="state">Estado</string>
    <string name="send">"   Registrar   "</string>
    <string name="save">Guardar</string>
    <string name="no_dogs_registered">No hay mascotas registradas</string>
    <string name="age">Edad</string>
    <string name="less_than_one_year">Menos de 1 a\u00f1o</string>
    <string name="between_one_and_seven_years">Entre 1 y 7 a\u00f1os</string>
    <string name="more_than_seven_years">M\u00e1s de 7 a\u00f1os</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="tips">Tips</string>
    <string name="title_activity_pre_signup">PreSignup</string>
    <string name="presignup_banner">Esta funcionalidad esta limitada a usuarios registrados. Para continuar por favor selecciona alguna de las siguientes opciones.\n \u00a1Gracias!</string>
    <string name="recover_password">Recuperar contrase\u00f1a</string>
    <string name="to_login">Iniciar sesi\u00f3n</string>
    <string name="enter">Entrar</string>
    <string name="to_signup">Registrarse</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_label">Correo</string>
    <string name="password_label">Contrase\u00f1a</string>
    <string name="year">Año</string>
    <string name="month">Mes</string>
    <string name="consult">Consultar</string>
    <string name="details">Ver detalles</string>
    <string name="edit">Editar Foto</string>
</resources>