<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <Button
        android:id="@+id/bt_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/details" />

    <Button
        android:id="@+id/bt_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_details"
        android:layout_alignRight="@+id/bt_details"
        android:layout_below="@+id/bt_details"
        android:layout_marginTop="10dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/bt_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_edit"
        android:layout_alignRight="@+id/bt_edit"
        android:layout_below="@+id/bt_edit"
        android:layout_marginTop="10dp"
        android:text="@string/share" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_share"
        android:layout_alignRight="@+id/bt_share"
        android:layout_below="@+id/bt_share"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />

</RelativeLayout>