<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_pause"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="Pausado"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pause"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:text="@string/save_map"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_discard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_save"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:text="@string/discard_map"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_resume"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_below="@+id/btn_discard"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/resume_map"
        android:textStyle="bold" />

</RelativeLayout>