<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/image1"
        android:layout_width="55dip"
        android:layout_height="55dip" />

    <TextView
        android:id="@+id/quote_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image1"
        android:paddingLeft="7dip"
        android:paddingTop="3dip"
        android:text="@string/q"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/quote_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/quote_q"
        android:paddingLeft="7dip"
        android:paddingTop="3dip"
        android:text="@string/no_details"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reply_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote_body"
        android:layout_toLeftOf="@+id/quote_body"
        android:paddingLeft="7dip"
        android:text="@string/a"
        android:textColor="@color/red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reply_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote_body"
        android:layout_toRightOf="@+id/reply_a"
        android:paddingLeft="6dip"
        android:textColor="@color/black" />

    <!--
        <Button android:id="@+id/deleteButton" android:layout_height="25dip"
		android:layout_width="25dip" android:layout_toRightOf="@+id/quote_body"
		android:background="@drawable/delete_icon2" android:visibility="visible" />
    -->

</RelativeLayout>